--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "@uniswap/v2-core",
-  "description": "🎛 Core contracts for the UniswapV2 protocol",
-  "version": "1.0.1",
-  "homepage": "https://uniswap.org",
+  "name": "@materia-dex/materia-contracts-core",
+  "description": "Core contracts for the Materia protocol",
+  "version": "1.0.0",
+  "homepage": "https://materiadex.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/uniswap-v2-core"
+    "url": "https://github.com/materia-dex/materia-contracts-core"
   },
   "keywords": [
-    "uniswap",
+    "materia",
     "ethereum",
-    "v2",
-    "core",
-    "uniswap-v2"
+    "core"
   ],
   "files": [
     "contracts",
