--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "compile": "waffle .waffle.json",
     "pretest": "yarn compile",
     "test": "mocha",
-    "prepublishOnly": "yarn test"
+    "prepublishOnly": "yarn test",
+    "flatten": "npx waffle flatten"
   },
   "license": "GPL-3.0-or-later"
 }
