--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@materia-dex/materia-contracts-core",
   "description": "Core contracts for the Materia protocol",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "homepage": "https://materiadex.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/materia-dex/materia-contracts-core"
+    "url": "git+https://github.com/materia-dex/materia-contracts-core.git"
   },
   "keywords": [
     "materia",
@@ -43,5 +43,14 @@
     "prepublishOnly": "yarn test",
     "flatten": "npx waffle flatten"
   },
-  "license": "GPL-3.0-or-later"
+  "license": "GPL-3.0-or-later",
+  "bugs": {
+    "url": "https://github.com/materia-dex/materia-contracts-core/issues"
+  },
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {},
+  "author": "materia"
 }
