--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@materia-dex/materia-contracts-core",
   "description": "Core contracts for the Materia protocol",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "homepage": "https://materiadex.com",
   "repository": {
     "type": "git",
@@ -52,5 +52,5 @@
     "test": "test"
   },
   "dependencies": {},
-  "author": "materia"
+  "author": "materia-dex"
 }
